--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,15 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
-    <dependencies><!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+    <dependencies>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.23</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
